2006-11-12  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/gnupload: Revert last change.  Add pointer to upload
	instructions of the GNU Maintenance Instructions.
	Suggestion by Karl Berry.

2006-11-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/gnupload: Add missing 'gnu' to example URL.
	Report by Karl Berry.

2006-10-28  Bobby Jack <bobbykjack@yahoo.co.uk>  (tiny change)

	* doc/automake.texi (amhello Explained): autoconf creates
	configure, not configure.ac.
	* THANKS: Update.

2006-10-20  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/automake.texi (Dist, Dependency Tracking Evolution):
	Fix some typos.
	* lib/Automake/Condition.pm: Likewise.
	* lib/Automake/DisjConditions.pm: Likewise.
	* lib/Automake/ItemDef.pm: Likewise.
	* lib/Automake/Options.pm: Likewise.
	* lib/Automake/Rule.pm: Likewise.
	* lib/Automake/VarDef.pm: Likewise.
	* lib/Automake/Variable.pm: Likewise.
	* lib/Automake/Wrap.pm: Likewise.
	* lib/Automake/XFile.pm: Likewise.
	* m4/substnot.m4: Likewise.

2006-10-16  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/gnupload: Update to version 1.1 of directive file.

2006-10-16  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/am/depend2.am (%SOURCEFLAG%): New substitution, goes
	right before the expanded source file name.
	* automake.in (%sourceflags): New global: per-extension flag
	to denote that the next compiler argument is the source file.
	(scan_autoconf_traces): Trace AC_FC_SRCEXT; initialize
	%sourceflags accordingly.
	(handle_single_transform): Store source file extension in...
	(%lang_specific_files): ...this and...
	(handle_languages): ...adjust here.  Pass flag in SOURCEFLAG.
	* doc/automake.texi (Optional): Add AC_FC_SRCEXT.
	(Fortran 9x Support): Update.
	* tests/fort2.test: New test.
	* tests/Makefile.am: Adjust.
	* NEWS, THANKS: Update.
	Suggested by Steven G. Johnson.

	For PR automake/480.
	* automake.in (lang_f77_rewrite, lang_fc_rewrite)
	(lang_ppfc_rewrite, lang_ppf77_rewrite, lang_ratfor_rewrite):