@@ -1,5 +1,10 @@
 2006-11-12  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* doc/Makefile.am: Use $(MAKE) $(AM_MAKEFLAGS) for building
+	amhello, to prevent gmake from invoking make with MAKEFLAGS
+	it does not understand.
+	Report by Patrick Welche.
+
 	* lib/gnupload: Revert last change.  Add pointer to upload
 	instructions of the GNU Maintenance Instructions.
 	Suggestion by Karl Berry.
